--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
+    "react-toastify": "^10.0.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
