--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "cloudinary": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
     "react-toastify": "^10.0.6",
+    "redux-persist": "^6.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
