--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router": "^7.0.2",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.15.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
