feat: implemented driver accept new request email sending feature to passenger.

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,2 +1,6 @@
 VITE_CLOUDINARY_PRESET_NAME=
 VITE_CLOUDINARY_CLOUD_NAME=
+VITE_EMAILJS_SERVICE_ID=
+VITE_EMAILJS_TEMPLATE_ID=
+VITE_EMAILJS_USER_PUBLIC_KEY=
+VITE_SENDER_GMAIL_ADDRESS=
